--- a/Superconductor_statistics.ipynb
+++ b/Superconductor_statistics.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initialize data\n",
+    "The source of this data is a database at uci. This data was produced Kam Hamidieh at the University of Pennsyivania. This has no missing values and does not have to be wrangled outside of standardization.\n",
+    "\n",
+    "The attributes of this database are the property elements that superconductor are composed of. Other than the critical point, none of the attributes are of the superconductor itself. The elemential properties are the atomic mass, first ionization energy, atomic radius, density, electron affinity, fusion heat, thermal conductivity, bond valence. Each of these attributes were seperated into the statistical features the mean of the elements, a weighted mean, a geometric mean, a wieghted geometric mean, entropy, weighted entropy, a range, weighted range, standard deviation weighted standard deviation. Weighted value considers of the ratio of elements while the unweighted does not. For more details see the link for the paper.There are 80 attributes (8 elemential properites X 10 tatistical features)\n",
+    "\n",
+    "Source of data: http://archive.ics.uci.edu/ml/datasets/Superconductivty+Data <br>\n",
+    "Source of paper:https://arxiv.org/abs/1803.10260 <br>\n",
+    "Access: Febuary 5, 2019"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -26,20 +40,6 @@
     "import warnings\n",
     "warnings.simplefilter(action='ignore', category=UserWarning)\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Initialize data\n",
-    "The source of this data is a database at uci. This data was produced Kam Hamidieh at the University of Pennsyivania. This has no missing values and does not have to be wrangled outside of standardization.\n",
-    "\n",
-    "The attributes of this database are the property elements that superconductor are composed of. Other than the critical point, none of the attributes are of the superconductor itself. The elemential properties are the atomic mass, first ionization energy, atomic radius, density, electron affinity, fusion heat, thermal conductivity, bond valence. Each of these attributes were seperated into the statistical features the mean of the elements, a weighted mean, a geometric mean, a wieghted geometric mean, entropy, weighted entropy, a range, weighted range, standard deviation weighted standard deviation. Weighted value considers of the ratio of elements while the unweighted does not. For more details see the link for the paper.There are 80 attributes (8 elemential properites X 10 tatistical features)\n",
-    "\n",
-    "Source of data: http://archive.ics.uci.edu/ml/datasets/Superconductivty+Data\n",
-    "Source of paper:https://arxiv.org/abs/1803.10260\n",
-    "Access: Febuary 5, 20or19"
    ]
   },
   {
