--- a/Superconductor_statistics.ipynb
+++ b/Superconductor_statistics.ipynb
@@ -88,9 +88,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Appearance of element in superconductors\n",
+    "## Appearance of element in superconductors\n",
     "\n",
-    "The figure below shows the number of superconductors for all elements present. The most abundant elements found in superconductor are oxygen, and copper appearing in 56.27% and 50.97% of superconductor in data set respectively.  There are 77 elements are present in superconductors database and 60 of them are present 5% of the time. With a high number but not overwhelming  of superconductors containing oxygen and copper, they may be some use in including it their presents in predictive model. In addition, 41.18% of superconductors do not contain oxygen or copper so including additional elements may be useful. Since properties used by Kam Hamidieh were derived from the elements present rather than the superconductors themselves, the properties are a proxy for the elements. It would be interesting to examine the performance of model from the elements present rather than the properties.  \n"
+    "\n",
+    "The figure below shows the number of superconductors for all elements present. The most abundant elements found in superconductor are oxygen, and copper appearing in 56.27% and 50.97% of superconductor in data set respectively. There are 77 elements are present in superconductors database and 60 of them are present 5% of the time. With a high number but not overwhelming of superconductors containing oxygen and copper, they may be some use in including it their presents in predictive model. In addition, 41.18% of superconductors do not contain oxygen or copper so including additional elements may be useful. Since properties used by Kam Hamidieh were derived from the elements present rather than the superconductors themselves, the properties are a proxy for the elements. "
    ]
   },
   {
