--- a/Superconductor_statistics.ipynb
+++ b/Superconductor_statistics.ipynb
@@ -286,10 +286,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize distribute of properties\n",
-    "The figures below shows histagrams overlapping kde distribution for the features and the critical temperature. While there are 80 features, many of the features are different statistical values of the same properties. In order to reduce the number of feature shown to a reasonable amount, only the weight means are displayed.  For many of the properties, there are two peaks, a large one and a smaller. This is particularly important observation for the critical temperature since it is the only property that belongs to the superconductor itself rather than the element components. Other properties to see this double peak pattern are first ionization energy, atomic radius, and density. \n",
-    "\n",
-    "This double peak pattern may suggest that there are two separate populations of superconductors within the dataset. It is well known there are two types of superconductors, type I and type II. There are a few attributes that distinguish type I and type II such as their interaction with a magnetic field but more importantly for this project is their critical temperature. Type I superconductors have lower critical points. It is reasonable to assume that the exists of two peaks is a result of data set containing two types of superconductors.\n"
+    "## Visualize distribute of properties\n",
+    "The figures below shows histagrams overlapping kde distribution for the features and the critical temperature. While there are 81 features, many of the features are different statistical values of the same properties. In order to reduce the number of feature shown to a reasonable amount, only the weight means are displayed.  For many of the properties, the distribution is bimodal, that is, there are two overlapping distribution. This is particularly important observation for the critical temperature since it is the only property that belongs to the superconductor itself rather than the element components. Other properties that the this bimodal pattern is strong are first ionization energy, atomic radius, and density. \n",
+    " \n",
+    "This bimodal pattern does suggest that there are two separate populations of superconductors within the dataset. It is well known there are two types of superconductors, type I and type II. There are a few attributes that distinguish type I and type II such as their interaction with a magnetic field but more importantly for this project is their critical temperature. Type I superconductors have lower critical points. It is reasonable to assume that the exists of bimodal distribution is a result of data set containing two types of superconductors. In the [Superconductor_clustering](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_clustering.ipynb) notebook, the superconductors do do separate into distinct clusters but not by type, particularly because the lower temperature cluster contains many type II superconductors. The reason for this bimodal distribution is unknown."
    ]
   },
   {
@@ -447,7 +447,7 @@
    "source": [
     "# Statistics Relations\n",
     "\n",
-    "Examining the staticals between attributes and critical temperature"
+    "Examining the staticals between attributes and critical temperature with 2D linear fitting. All the properties examined were found to be signistically significant a p-value of the pearson correlation coefficient."
    ]
   },
   {
