--- a/Superconductor_statistics.ipynb
+++ b/Superconductor_statistics.ipynb
@@ -446,8 +446,8 @@
    "metadata": {},
    "source": [
     "# Statistics Relations\n",
-    "\n",
-    "Examining the staticals between attributes and critical temperature with 2D linear fitting. All the properties examined were found to be signistically significant a p-value of the pearson correlation coefficient."
+    " \n",
+    "Examining the staticals between attributes and critical temperature with 2D linear fitting. All the properties examined were found to be statistically significant a p-value of the pearson correlation coefficient."
    ]
   },
   {
