--- a/Superconductor_linear_reg.ipynb
+++ b/Superconductor_linear_reg.ipynb
@@ -301,12 +301,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Important Features"
+    "## Features with the Largest Coefficients"
    ]
   },
   {
