--- a/Superconductor_gradient_boosting.ipynb
+++ b/Superconductor_gradient_boosting.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,10 +60,6 @@
     "from sklearn.cluster import KMeans  \n",
     "#from hdbscan import HDBSCAN\n",
     "\n",
-    "%reload_ext autoreload\n",
-    "%autoreload 2\n",
-    "%aimport ipynb\n",
-    "\n",
     "#dataframes with was initialized in the Superconductor_statistics notebook\n",
     "from ipynb.fs.defs.Superconductor_statistics import InitializeDataframes\n",
     "#clustering algorithm Superconductor_clustering notebook\n",
@@ -83,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -158,10 +154,10 @@
      "output_type": "stream",
      "text": [
       "Time with Scikit-Learn API\n",
-      "4.26 s ± 103 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "4.12 s ± 78.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
       "\n",
       "Time without Scikit-Learn API\n",
-      "158 ms ± 19.7 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "139 ms ± 840 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -188,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -265,7 +261,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.69 s ± 9.35 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.68 s ± 26.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -293,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -455,16 +451,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Features for all labeled data\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -652,7 +641,7 @@
        "10                         std_Density         0.03  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +653,6 @@
     "df_all.rename(columns={'index':'Feature'},inplace=True)\n",
     "df_all['Label'] = 'All label'\n",
     "df_all['Rank'] = range(1,11,1)\n",
-    "#display(df_all)\n",
     "\n",
     "#Get Important features for model 1\n",
     "df1 = grid_xgb1.best_estimator_.named_steps['xgboosting'].get_feature_importance(X_train.columns)[['Percent Gain']]\n",
@@ -679,7 +667,6 @@
     "df2.rename(columns={'index':'Feature'},inplace=True)\n",
     "df2['Label'] = 'label 2'\n",
     "df2['Rank'] = range(1,11,1)\n",
-    "#display(df2)\n",
     "\n",
     "#combine into one table\n",
     "df_merged = pd.concat([df_all,df1,df2])\n",
