--- a/Superconductor_clustering.ipynb
+++ b/Superconductor_clustering.ipynb
@@ -58,7 +58,7 @@
     " \n",
     "The superconductors in the data set were separated into two clusters with Kmeans method. These clusters were labeled \"Label 1\" and \"Label 2\". These labels were originally picks because it was believed that the clusters were separated by type I/II which was not the case.\n",
     " \n",
-    "HDBSCAN and Affinity Propagation was also attempted to separate the data into clusters but both algorithm seperated the data into thousands of clusters rather than two."
+    "HDBSCAN and Affinity Propagation were also attempted to separate the data into clusters but both algorithm seperated the data into thousands of clusters rather than two."
    ]
   },
   {
@@ -115,8 +115,8 @@
    "metadata": {},
    "source": [
     "## Cluster Histagrams\n",
-    "\n",
-    "The following histagrams are same distibutions from the  [statistics](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_statistics.ipynb) notebook with the data seperated by cluster by color."
+    " \n",
+    "The following histagrams are same distributions from the  [statistics](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_statistics.ipynb) notebook with the data separated by cluster by color."
    ]
   },
   {
