--- a/Superconductor_clustering.ipynb
+++ b/Superconductor_clustering.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Clusters into type I and type II superconductors\n",
     " \n",
-    "As shown by this distributions in the [statistics](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_statistics.ipynb) notebook, the data is bimodal. Superconductors can be separated into into type I and II superconductors. Type I is lower in temperature and according to BCS cannot exceed 25 or 30 K. While our intuition suggests that the distribution separates into type I/II when clustered because there is clear divide by temperature, this was not the case. It was found that a significant number of the superconductors in lower temperature cluster were type II. It is not clear what factors cause the distribution to be bimodal but it may be useful to separate the data into clusters. The utility  of clustering for the prediction of critical temperature was investigated in the [linear regression](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_linear_reg.ipynb) and [gradient boosting](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_gradient_boosting.ipynb) notebooks\n"
+    "As shown by this distributions in the [statistics](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_statistics.ipynb) notebook, the data is bimodal. Superconductors can be separated into type I and II superconductors. Type I is lower in temperature and according to BCS cannot exceed 25 or 30 K. While our intuition suggests that the distribution separates into type I/II when clustered because there is clear divide by temperature, this was not the case. It was found that a significant number of the superconductors in lower temperature cluster were type II. It is not clear what factors cause the distribution to be bimodal but it may be useful to separate the data into clusters. The utility  of clustering for the prediction of critical temperature was investigated in the [linear regression](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_linear_reg.ipynb) and [gradient boosting](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_gradient_boosting.ipynb) notebooks\n"
    ]
   },
   {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +71,10 @@
     "    #delete labels if already exists\n",
     "    if 'label' in prop_df.columns:\n",
     "        prop_df.drop('label',axis=1,inplace=True)\n",
+    "\n",
+    "    #Highest critical temperature (in Kelven) for type I superconductor \n",
+    "    #Based on the highest one in 1986 when type II's were discovered\n",
+    "    #highest_type1 = 23\n",
     "    \n",
     "    \n",
     "    #standard scale and cluster\n",
@@ -112,7 +116,7 @@
    "source": [
     "## Cluster Histagrams\n",
     " \n",
-    "The following histagrams are same distributions from the  [statistics](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_statistics.ipynb) notebook with the data separated by cluster by color."
+    "The following histagrams are the same distributions from the [statistics](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_statistics.ipynb) notebook with the cluster separation shown by color."
    ]
   },
   {
