--- a/Superconductor_clustering.ipynb
+++ b/Superconductor_clustering.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "## K-means clusters\n",
     " \n",
-    "The superconductors in the data set were separated into two clusters by K-means clustering. These clusters were labeled \"Label 1\" and \"Label 2\". These labels were originally picks because it was believed that the clusters were separated by type I/II which was not the case.\n",
+    "The superconductors in the data set were separated into two clusters by K-means clustering. These clusters were labeled \"Label 1\" and \"Label 2\". These labels were originally pick because it was believed that the clusters were separated by type I/II which was not the case.\n",
     " \n",
     "HDBSCAN and Affinity Propagation were also attempted to separate the data into clusters but both algorithm seperated the data into thousands of clusters rather than two."
    ]
