--- a/Superconductor_clustering.ipynb
+++ b/Superconductor_clustering.ipynb
@@ -116,7 +116,7 @@
    "source": [
     "## Cluster Histagrams\n",
     " \n",
-    "The following histagrams are the same distributions from the [statistics](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_statistics.ipynb) notebook  by with the cluster separation shown by color."
+    "The following histagrams are the same distributions from the [statistics](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_statistics.ipynb) notebook but with the cluster separation shown by color."
    ]
   },
   {
