--- a/Superconductor_clustering.ipynb
+++ b/Superconductor_clustering.ipynb
@@ -259,7 +259,7 @@
     "plt.yticks([])\n",
     "plt.xticks(fontsize=20)\n",
     "plt.title('Distribution of Valence',fontsize=24)\n",
-    "plt.xlabel('Mean elements valence',fontsize=20)\n",
+    "plt.xlabel('Mean Elements Valence',fontsize=20)\n",
     "\n",
     "plt.savefig('images/Supercon_hist_typed_2.jpg',bbox_inches='tight')\n",
     "plt.show()"
