--- a/Superconductor_statistics.ipynb
+++ b/Superconductor_statistics.ipynb
@@ -449,7 +449,7 @@
    "source": [
     "## Statistical Relations\n",
     " \n",
-    "Examining the staticals between attributes and critical temperature with 2D linear fitting. All the properties examined were found to be statistically significant a p-value of the pearson correlation coefficient."
+    "Examining the staticals between attributes and critical temperature with 2D linear fit. All the properties examined were found to be statistically significant based on the p-value of the pearson correlation coefficient."
    ]
   },
   {
