--- a/Superconductor_linear_reg.ipynb
+++ b/Superconductor_linear_reg.ipynb
@@ -5,11 +5,8 @@
    "metadata": {},
    "source": [
     "# Linear Regression\n",
-    "Using linear regression, the critical temperatures of superconductors were predict. \n",
-    "From the type clusters created by the [clustering](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_clustering.ipynb) notebook notebook, 3 models were created. \n",
-    "One only using data from Label 1, one only using the data from Label 2, and one using all labeled data. \n",
-    "Seperating the linear regression results were improved by\n",
-    "seperating the data before fitting. The models RMSE was 19.50 K without seperating and 17.36 K when seperated."
+    "\n",
+    "Using linear regression, the critical temperatures of superconductors were predict.  From the type clusters created by the [clustering](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_clustering.ipynb) notebook, 3 models were created. One only using data from Label 1, one only using the data from Label 2, and one using all labeled data. Separating the data by cluster before performing linear regression improved results. The models RMSE was 19.50 K without separating and 17.36 K when separated."
    ]
   },
   {
