--- a/Superconductor_gradient_boosting.ipynb
+++ b/Superconductor_gradient_boosting.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "# Gradient Boosting\n",
-    "\n",
-    "Using gradient boosting, the critical temperatures of superconductors were predict. From the type clusters created by the [clustering](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_clustering.ipynb) notebook, 3 models were created. One only using data from Label 1, one only using the data from Label 2, and one using all labeled data. Unlike with the linear regression models, the gradient boosting results were not improved by seperating the data before fitting. The models RMSE was 11.40 K  without seperating and 11.56 K when seperated."
+    " \n",
+    "Using gradient boosting, the critical temperatures of superconductors were predicted. Using the clusters produced by the [clustering](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_clustering.ipynb) notebook, 3 models were created. One only using data from Label 1, one only using the data from Label 2, and one using all labeled data. Unlike with the linear regression models, the gradient boosting results were not improved by separating the data into clusters before fitting. The models RMSE was 11.40 K  without separating and 11.56 K when seperated."
    ]
   },
   {
@@ -74,7 +74,7 @@
    "source": [
     "## Initializing data and seperating into clusters.\n",
     "\n",
-    "See [Superconductor_statistics.ipynb](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_statistics.ipynb) for data wrangling details and [Superconductor_clustering.ipynb](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_clustering.ipynb) for  clustering details."
+    "See [statistics](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_statistics.ipynb) notebook for data wrangling details and [clustering](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_clustering.ipynb) notebook for  clustering details."
    ]
   },
   {
@@ -109,8 +109,8 @@
    "metadata": {},
    "source": [
     "## Property data split into training set and test set\n",
-    "\n",
-    "Using the properties dataframe, three linear models were created. One from the cluster labeled 1, one from the cluster labeled 2, and the with all labeled data. The data from each model is seperated into a training set (to make the model) and a testing set (to test the model), In order to prevent unbalanced data, an equal number of data points from each cluster will be placed into the training set of with all labeled data."
+    " \n",
+    "Using the properties dataframe, three linear models were created. One from the cluster labeled 1, one from the cluster labeled 2, and the with all labeled data. The data from each model is separated into a training set (to make the model) and a testing set (to test the model), In order to prevent unbalanced data, an equal number of data points from each cluster will be placed into the training set with all labeled data."
    ]
   },
   {
@@ -141,7 +141,7 @@
    "metadata": {},
    "source": [
     "## Time Test\n",
-    "The fit times using xgboost's Scikit-Learn API vs. using xgboost are compared. Fitting with xgboost without the Scikit-Learn API is 30 times faster."
+    "The time for fittings using xgboost's Scikit-Learn API vs. using xgboost alone was compared. Fitting with xgboost without the Scikit-Learn API is 30 times faster."
    ]
   },
   {
@@ -179,7 +179,7 @@
     "## xgboost interface function\n",
     "\n",
     "Adapted from a [script on kaggle](https://www.kaggle.com/tanitter/grid-search-xgboost-with-scikit-learn),\n",
-    "custom functions to interface xgboost with sklearn's Pipeline and GridSearchCV. "
+    "below is a custom functions which interface xgboost with sklearn's Pipeline and GridSearchCV without using the slow Scikit-Learn XGBRegressor API."
    ]
   },
   {
@@ -282,8 +282,9 @@
    "metadata": {},
    "source": [
     "## Gradient Boosting: Tuning Hyperparameters\n",
-    "In this section, the hyperparameters of the gradient boosting models are tune to predict the critical temperature of superconductors. [Hamidieh](https://arxiv.org/abs/1803.10260), who work this project is a continuation of, used a more extensive grid to tune their model than here. They tuned the learning rate and number of trees (which we did not) and did not tune the subsample of data (which we did). We found that learning rate and number of trees did not have a big effect on root means square error(RMSE) and due to the time restraint on this project, they were not tuned. \n",
     "\n",
+    "In the below cells, the hyperparameters of the gradient boosting models are tune to predict the critical temperature of superconductors. [Hamidieh](https://arxiv.org/abs/1803.10260), who work this project is a continuation of, used a more extensive grid to tune their model than here. They tuned the learning rate and number of trees (which we did not) and did not tune the subsample of data (which we did). We found that the learning rate and the number of trees did not have a big effect on root means square error(RMSE) and due to the time restraint on this project, they were not tuned. \n",
+    " \n",
     "Three models were created (and tuned), one using Label 1 only, and one using Label 2 only, and one using all labeled training data."
    ]
   },
@@ -384,7 +385,7 @@
    "source": [
     "## Get Predicted Values and RMSE Error\n",
     "\n",
-    "The RMSE using all three models is shown below. The prediction of gradient boosting model fitted using all labeled had an RMSE of 11.40 K. When the labeled data was seperated into different gradient boosting model, the RMSE was 11.56 K. Seperating the labeled data was therefore found not to improve model accuracy when fitting with gradient boosting."
+    "The RMSE using all three models is shown below. The prediction of gradient boosting model fitted using all labeled had an RMSE of 11.40 K. When the clustered labeled data was separated into different gradient boosting model, the RMSE was 11.56 K. Separating the labeled data by clusters was therefore not found to improve model accuracy when fitting with gradient boosting."
    ]
   },
   {
@@ -446,7 +447,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Important Features"
+    "## Important Features\n",
+    "\n",
+    "The features with the largest gains are below. The percent gain was determined by totals of a feature divided by the total gains of all features. It is assumed that the larger the gain, the more important that feature is for critical temperature prediction."
    ]
   },
   {
