--- a/Superconductor_linear_reg.ipynb
+++ b/Superconductor_linear_reg.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# Linear Regression\n",
     "\n",
-    "Using linear regression, the critical temperatures of superconductors were predict.  From the type clusters created by the [clustering](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_clustering.ipynb) notebook, 3 models were created. One only using data from Label 1, one only using the data from Label 2, and one using all labeled data. Separating the data by cluster before performing linear regression improved results. The models RMSE was 19.50 K without separating and 17.36 K when separated."
+    "Using linear regression, the critical temperatures of superconductors were predicted.  Using the clusters produced by the [clustering](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_clustering.ipynb) notebook, 3 models were created. One only using data from Label 1, one only using the data from Label 2, and one using all labeled data. Separating the data by cluster before performing linear regression improved results. The models RMSE was 19.50 K without separating and 17.36 K when separated."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,12 +66,12 @@
    "source": [
     "## Initializing data and seperating into clusters.\n",
     "\n",
-    "See [Superconductor_statistics.ipynb](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_statistics.ipynb) for data wrangling details and [Superconductor_clustering.ipynb](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_clustering.ipynb) for  clustering details."
+    "See [statistics](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_statistics.ipynb) notebook for data wrangling details and [clustering](https://github.com/fullmetalchem15t/superconductors/blob/master/Superconductor_clustering.ipynb) notebook for  clustering details."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,13 +101,13 @@
    "metadata": {},
    "source": [
     "## Property data split into training set and test set\n",
-    "\n",
-    "Using the properties dataframe, three linear models were created. One from the cluster labeled 1, one from the cluster labeled 2, and the with all labeled data. The data from each model is seperated into a training set (to make the model) and a testing set (to test the model), In order to prevent unbalanced data, an equal number of data points from each cluster will be placed into the training set of with all labeled data."
+    " \n",
+    "Using the properties dataframe, three linear models were created. One from the cluster labeled 1, one from the cluster labeled 2, and the with all labeled data. The data from each model is separated into a training set (to make the model) and a testing set (to test the model), In order to prevent unbalanced data, an equal number of data points from each cluster will be placed into the training set with all labeled data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,23 +132,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Regression Model\n",
-    "\n",
-    "The linear regression model was produced from a least square method. Three models were created, \n",
-    "one using Label 1 only, and one using Label 2 only, and one using all labeled training data.\n",
-    "\n",
-    "We had previously tried regulating the linear regression using the scikit-learns elastic net regularization\n",
-    "method parameterized with gridSearchCV. The RMSE for this method was larger than a simple least square method so it least square method method was used instend.\n",
-    "\n",
+    "## Linear Regression Model\n",
+    " \n",
+    "The linear regression model was produced from a least square method. Three models were created, one using Label 1 only, and one using Label 2 only, and one using all labeled training data. The predicted values found from the two clustered models were combined in order to determine the RMSE when clustering.\n",
+    " \n",
+    "We had previously tried regulating the linear regression using the scikit-learns elastic net regularization method parameterized with gridSearchCV. The RMSE for this method was larger than a simple least square method so it least square method method was used instead.\n",
     "\n",
     "Results using ElasticNet : \n",
     "<br>RMSE = 21.37 K without clustering \n",
-    "<br>RMSE = 18.53 K with clustering"
+    "<br>RMSE = 18.53 K with clustering\n",
+    "\n",
+    "Results using least squared method with regularization\n",
+    "<br>RMSE = 19.50 K without clustering \n",
+    "<br>RMSE = 17.36 K with clustering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -232,12 +233,12 @@
    "source": [
     "## Get Predicted Values and RMSE Error\n",
     "\n",
-    "The RMSE using all three models is shown below. The prediction of linear regression fitted using all labeled had an RMSE of 19.50 K. When the labeled data was seperated into different gradient boosting model, the RMSE was 17.36 K. Seperating the labeled data therefore did improve linear regression model accuracy.  "
+    "The RMSE using all three models is shown below. The prediction of linear regression fitted using all labeled had an RMSE of 19.50 K. When the labeled data was separated into different gradient boosting model, the RMSE was 17.36 K. Separating the labeled data therefore was determined to improve accuracy of the linear regression model.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -301,12 +302,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Features with the Largest Coefficients"
+    "## Features with the Largest Coefficients\n",
+    "\n",
+    "The features with the largest coefficients are below. It is assumed that the larger the coefficient, the more important that feature is for critical temperature prediction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +485,7 @@
        "10         wtd_gmean_Valence  -61.15  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
