--- a/Superconductor_clustering.ipynb
+++ b/Superconductor_clustering.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,8 +88,8 @@
     "    #correspond to type I and II. We know longer think this is the case.\n",
     "    prop_df['label'] = [1 if x==1 else 2 for x in cluster_labels ]    \n",
     "    \n",
-    "    prop_label1 = prop_df[prop_df['label']==1]\n",
-    "    prop_label2 = prop_df[prop_df['label']==2]    \n",
+    "    #prop_label1 = prop_df[prop_df['label']==1]\n",
+    "    #prop_label2 = prop_df[prop_df['label']==2]    \n",
     "    \n",
     "#    print('Of the {} superconductors labeled type I by Kmean, {} were above {} K.'\n",
     "#         .format(prop_label1['critical_temp'].count(),\n",
@@ -108,7 +108,21 @@
     "    return prop_df\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    prop_df=KMeanTypeI_II(prop_df)"
+    "    prop_df=KMeanTypeI_II(prop_df)#create bool label I/II database\n",
+    "    label1_bool = prop_df['label'] == 1 \n",
+    "\n",
+    "    #remove label from dataframe. It is not used by linear model\n",
+    "    prop_df.drop(['label'],axis=1,inplace=True)\n",
+    "\n",
+    "    #label 1\n",
+    "    prop_label1 = prop_df[label1_bool]\n",
+    "    atoms_label1 = atoms_df[label1_bool]\n",
+    "    material_label1 = material[label1_bool]\n",
+    "\n",
+    "    #label 2\n",
+    "    prop_label2 = prop_df[~label1_bool]\n",
+    "    atoms_label2 = atoms_df[~label1_bool]\n",
+    "    material_label2 = material[~label1_bool]"
    ]
   },
   {
@@ -122,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +146,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-65a63f408660>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#atomic mass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0max1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_subplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mTypeI_II_histagrams\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprop_label1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprop_label2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wtd_mean_atomic_mass'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myticks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxticks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfontsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-20-65a63f408660>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#atomic mass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0max1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_subplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mTypeI_II_histagrams\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprop_label1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprop_label2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wtd_mean_atomic_mass'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myticks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxticks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfontsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'prop_label1' is not defined"
      ]
     },
