--- a/Superconductor_gradient_boosting.ipynb
+++ b/Superconductor_gradient_boosting.ipynb
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "#regular expression\n",
+    "#regular expressioni\n",
     "import re\n",
     "\n",
     "#visualization\n",
